...
  var body: some Scene {
    Settings {
      EmptyView()
    }
    .commands {
      CommandGroup(replacing: .newItem) {
        Button("New Sticky") {
          createNewSticky()
        }
        .keyboardShortcut("n")

        Button("Open...") {
          openFile()
...
